--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -31,7 +31,7 @@
             aria-describedby="emailHelp"
           />
           <div id="emailHelp" class="form-text">
-            We'll never share your email with anyone else.
+            We'll never share your email with anyone else and dont disclose it to anyone.
           </div>
         </div>
         <div class="mb-3">
